# pgn-read

./: LICENCE  README  __init__.py  pyproject.toml  setup.cfg  setup.py  version.py
core/: __init__.py  constants.py  parser.py  reader.py
core/test/: __init__.py  constants_test.py  parser_test.py  reader_test.py
pgn/: README  __init__.py
pgn/core/: constants.py  parser.py  reader.py
pgn_read/core/: __init__.py  constants.py  game.py  game_ignore_case_pgn.py  game_indicate_check.py  game_strict_pgn.py  game_text_pgn.py  gamedata.py  movecount_parser.py  movetext_parser.py  parser.py  piece.py  squares.py  tagpair_parser.py
pgn_read/core/test/: parser_test.py
pgn_read/core/tests/: __init__.py  test_add_token_to_game.py  test_composite_tags.py  test_constants.py  test_game.py  test_movecount_parser.py  test_movetext_parser.py  test_movetext_read_games.py  test_parser.py  test_pgn_files.py  test_piece.py  test_read_games.py  test_squares.py  test_tagpair_parser.py  test_tagpair_read_games.py  timeit_readpgn.py
pgn_read/core/tests/pgn_files/: 4ncl_96-97_01.pgn  4ncl_96-97_02.pgn  4ncl_96-97_03.pgn  4ncl_96-97_04.pgn  4ncl_96-97_05.pgn  4ncl_96-97_06.pgn  4ncl_97-98_07.pgn  FIDE_longest_possible_game.pgn  Little_01.pgn  Little_02.pgn  Little_03.pgn  Little_04.pgn  Little_05.pgn  Little_06.pgn  Little_07.pgn  Little_08.pgn  Little_09.pgn  Little_10.pgn  Little_11.pgn  Little_12.pgn  (+36 more)
pgn_read/samples/: _utilities.py  _utilities_moves.py  _utilities_tagpair.py  count_games.py  count_moves.py  count_tag_pairs.py  ignore_case_pgn_games.py  pgn_games.py  strict_pgn_games.py  text_pgn_games.py
pylint/: pylint.conf
samples/: testconstants.py  testdisplay.py  testeditor.py  testparser.py  testpgndisplay.py  testpgnedit.py  testreader.py  testreader_file.py  testreader_stats.py
test/: __init__.py  break_pgn_0_8_1_c.pgn  testconstants.py  testdisplay.py  testeditor.py  testparser.py  testpgndisplay.py  testpgnedit.py  testreader.py  testreader_a.py  testreader_file.py  testreader_stats.py
