[build-system]
requires = [
    "setuptools>=77.0.3",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[project]
name = "pgn-read"
version = "2.6"
authors = [
  { name="Roger Marsh", email="roger.marsh@solentware.co.uk" },
]
description = "Portable Game Notation (PGN) parser."
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Games/Entertainment :: Board Games",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
]
license = "BSD-3-Clause"
license-files = ["LICENCE"]
readme = "README"

[project.urls]
Homepage = "http://www.solentware.co.uk"
Repository = "https://github.com/RogerMarsh/pgn-read.git"
"Bug Tracker" = "https://github.com/RogerMarsh/pgn-read/issues"

[tool.setuptools]
packages = [
    "pgn_read",
    "pgn_read.core",
    "pgn_read.samples",
]
