[metadata]
name = pgn-read
version = 2.3.dev0
description = Portable Game Notation (PGN) parser
author = Roger Marsh
author_email = roger.marsh@solentware.co.uk
url = http://www.solentware.co.uk
long_description = file: README
license = BSD
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Software Development
    Topic :: Games/Entertainment :: Board Games
    Intended Audience :: Developers
    Development Status :: 3 - Alpha

[options]
packages =
    pgn_read
    pgn_read.core
    pgn_read.samples
